--- a/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
@@ -14,4 +14,4 @@ Stel dat we het rondje van kleur willen laten veranderen als er op geklikt wordt
 
 \lstinputlisting[style=densecode]{Examples/Events.hs}
 
-Hierin is dus een \type{Event} shape toegevoegd voor onze cirkel, hierin wordt een eventId toegevoegd waar later naar gerefereerd kan worden. Daarnaast wordt vermeld dat deze shape geinteresseerd is in muiskliks. Als de muiskliks dan daadwerkelijk gebeurd wordt de tweede pattern van \inlinecode{handler} uitgevoerd, waar naast de \type{Event} ook nog een \type{Fill} over de cirkel toegepast wordt.
+Hierin is dus een \type{Event} shape toegevoegd voor onze cirkel, hierin wordt een eventId toegevoegd waar later naar gerefereerd kan worden. Daarnaast wordt vermeld dat deze shape ge\"interesseerd is in muisklikken. Als de muisklikken dan daadwerkelijk gebeurd wordt de tweede pattern van \inlinecode{handler} uitgevoerd, waar naast de \type{Event} ook nog een \type{Fill} over de cirkel toegepast wordt.
