--- a/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
@@ -46,7 +46,7 @@ function shapeFromData(message) {
 }
 \end{lstlisting}
 
-Een derde geval is dat er geen shape bestaat binnen Kinetic, zo heeft Kinetic wel een \inlinecode{Kinetic.Wedge} (nederlands ``taartpuntje''), maar geen arc (een stuk van een cirkel). Daartoe zal Kinetic uitgebreid moeten worden met ons primitieve. Omdat Javascript een prototypegebaseerde taal is kunnen we \inlinecode{Kinetic.Shape} uitbreiden tot onze eigen \inlinecode{CanvasHs.Arc}, daartoe bied Kinetic ons de \inlinecode{Kinetic.Util.extend} functie aan. Verder dienen we een constructor te maken voor ons object, onze superklasse aanroepen, en de tekenfunctie naar onszelf laten verwijzen.
+Een derde geval is dat er geen shape bestaat binnen Kinetic, zo heeft Kinetic wel een \inlinecode{Kinetic.Wedge} (Nederlands ``taartpuntje''), maar geen arc (een stuk van een cirkel). Daartoe zal Kinetic uitgebreid moeten worden met ons primitieve. Omdat Javascript een prototypegebaseerde taal is kunnen we \inlinecode{Kinetic.Shape} uitbreiden tot onze eigen \inlinecode{CanvasHs.Arc}, daartoe bied Kinetic ons de \inlinecode{Kinetic.Util.extend} functie aan. Verder dienen we een constructor te maken voor ons object, onze superklasse aanroepen, en de tekenfunctie naar onszelf laten verwijzen.
 
 \begin{lstlisting}[style=densecode, language=JavaScript]
 // As this is a custom shape, we will define our own namespace
@@ -94,7 +94,7 @@ Voor het toevoegen van Shapes aan de JavaScript-zijde van Canvas.hs is het toevo
 
 \subsection{Haskell}
 
-Binnen \todo{de haskell, zo noemen we dat niet de module}de haskell kan uitbreiden op twee manieren, de eerste manier is om door de beschikbare shapes een nieuwe shape te maken, zo hoeft het protocol niet aangepast te worden. Als voorbeeld nemen we een rechthoek met afgeronde hoekjes, we definieren een functie \inlinecode{roundedRect} die een shape teruggeeft.
+Binnen \todo{de haskell, zo noemen we dat niet de module}de haskell kan uitbreiden op twee manieren, de eerste manier is om door de beschikbare shapes een nieuwe shape te maken, zo hoeft het protocol niet aangepast te worden. Als voorbeeld nemen we een rechthoek met afgeronde hoekjes, we defini\"eren een functie \inlinecode{roundedRect} die een shape teruggeeft.
 
 \lstinputlisting[style=densecode, language=Haskell]{Examples/RoundedRect.hs}
 
