--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -10,7 +10,7 @@ De architectuur van een applicatie die Canvas.hs gebruikt bestaat uit drie compo
 \end{figure}
 
 \subsubsection{Communicatie}
-Gegevensoverdracht tussen de HTTP server en de browser moet snel gebeuren. Om de grafische elementen in de browser weer te geven moeten de output van de grafische interface naar de browser gecomunniceert worden. Wanneer de gebruiker interactie heeft met de interface moet dit naar het programma van de gebruiker gecommuniceerd worden. Verder zal het programma bepaalde acties moeten kunnen uitvoeren op de webbrowser, zoals fullscreen laten gaan van de browser. Een belangrijke overwegingen is dat de grafische interface zo min mogelijk vertraging moet hebben.
+Gegevensoverdracht tussen de HTTP server en de browser moet snel gebeuren. Om de grafische elementen in de browser weer te geven moeten de output van de grafische interface naar de browser gecommuniceerd worden. Wanneer de gebruiker interactie heeft met de interface moet dit naar het programma van de gebruiker gecommuniceerd worden. Verder zal het programma bepaalde acties moeten kunnen uitvoeren op de webbrowser, zoals fullscreen laten gaan van de browser. Een belangrijke overwegingen is dat de grafische interface zo min mogelijk vertraging moet hebben.
 
 
 \paragraph{Websockets}
@@ -19,7 +19,7 @@ Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding t
 \paragraph{Protocol}
 Het formaat van het protocol is JSON\todo{JSON moet nog toegelicht worden}, dit is praktisch doordat dit eenvoudig in JavaScript te gebruiken is. In tegenstelling to XML heeft JSON bovendien weinig overhead.
 
-Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de browseromgeving te ondersteunen. Voor optimale performance wordt de structuur zo snel mogelijk vertaald naar de structuur van KineticJS\todo{Kinetic moet geintroduceerd worden en toegelicht worden}. De programmeur bepaalt wanneer er interface data verstuurd word en wanneer acties verstuurd worden naar de client.
+Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de browseromgeving te ondersteunen. Voor optimale performance wordt de structuur zo snel mogelijk vertaald naar de structuur van KineticJS\todo{Kinetic moet ge\"introduceerd worden en toegelicht worden}. De programmeur bepaalt wanneer er interface data verstuurd word en wanneer acties verstuurd worden naar de client.
 
 \paragraph{Stateless client}
 In functioneel programmeren is het gebruikelijk\todo{gebruikelijk, veel gebruik te maken? dat is een beetje een vage aannamen} om veel gebruik te maken van functies die puur werken zonder state bij te houden in verschillende variabelen. In de huidige opzet van het vak functioneel programmeren biedt de grafische module een state object aan waarin de gebruiker alle state variabelen in kan opslaan. Wanneer de gebruiker de grafische interface updatet doet hij dit door de volledige boom van grafische elementen aan te passen of over de huidige output te tekenen. Dit maakt het overzichtelijk voor de programmeur omdat de grafische interface dan geen eigen state bijhoudt. Dit maakt de grafische interface op de client stateless. Een groot nadeel hiervan is dat iedere keer dat de grafische interface geupdated wordt ook de volledige grafische output weer naar de client verstuurd dient te worden. De enige state die de client vasthoudt wordt veroorzaakt door acties.
