--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -5,15 +5,16 @@ Binnen onze library zijn een aantal ontwerpkeuzes moeten maken. Ten eerste moete
 \subsubsection{Grafisch}
 De meest belangrijke keuze die gemaakt is, is hoe er getekend wordt. Voorheen werd er binnen het vak Functioneel Programmeren gebruik gemaakt van Gloss. Binnen Gloss wordt alles relatief getekend en dan getransleerd, op een manier gelijkend aan OpenGl. Deze manier van tekenen is gestructureerd, maar zeker niet eenvoudig. Het tekenen van elementen op arbitraire plaatsen van het scherm heeft zowel een shape als een translatie nodig.
 
-De tegenhanger van deze methode is het absoluut tekenen van alle elementen. Voor het tekenen van kleine grafische interfaces is dit erg eenvoudig, teken gewoon een paar vierkantjes op arbitraire locaties op het canvas. Het nadeel van deze methode is dat als er meerdere vormen verplaatst moeten worden, dit stuk voor stuk moet gebeuren. Daarnaast is het invullen van een vorm een attribuut van de vorm, en daartoe is het niet mogelijk om meerdere elementen tegelijk van kleur te voorzien. Dat probleem zou opgelost kunnen worden door functies binnen de module te defini"eren die op een lijst van shape een translatie kan toepassen.
+De tegenhanger van deze methode is het absoluut tekenen van alle elementen. Voor het tekenen van kleine grafische interfaces is dit erg eenvoudig, teken gewoon een paar vierkantjes op arbitraire locaties op het canvas. Het nadeel van deze methode is dat als er meerdere vormen verplaatst moeten worden, dit stuk voor stuk moet gebeuren. Daarnaast is het invullen van een vorm een attribuut van de vorm, en daartoe is het niet mogelijk om meerdere elementen tegelijk van kleur te voorzien. Dat probleem zou opgelost kunnen worden door functies binnen de module te defini\"eren die op een lijst van shape een translatie kan toepassen.
 
 Er is ook het tekenmodel van onze Javascript library, Kinetic. Deze tekent alles absoluut, maar ondersteunt lagen die afzonderlijk geschaald kunnen worden. Er is besloten zo min mogelijk protocollen te willen, daartoe is er eerst gekeken naar het doortrekken van het Kinetic model naar het grafisch model van de Canvas.Hs module, vooral zodat er maar een echt datamodel zou zijn, en omdat de client dan triviaal in elkaar gezet kon worden.
 
 Uiteindelijk is het een compromis geworden tussen het datamodel van Kinetic en van Gloss. De gebruiker tekent het overgrote gedeelte van de elementen absoluut, maar kan elementen groeperen in een \inlinecode{Container}. Binnen een \inlinecode{Container} is wederom een absoluut co"ordinatenstelsel, waar de gebruiker dan shapes in kan tekenen. Verder zijn er translaties mogelijk op shapes, zo kan de gebruiker een vorm roteren, en deze translaties werken ook op Containers. Wil de gebruiker bijvoorbeeld een knop met een pijltje draaien, dan kan deze in een container geplaatst worden, en in zijn geheel geroteerd worden.
 
-Dit datamodel combineerd dus de goede kanten van Kinetic (het snel absoluut kunnen tekenen van vormen) met de voordelen van Gloss (het makkelijk kunnen verplaatsen, kleuren, roteren etc. van meerdere shapes).
+Dit datamodel combineert dus de goede kanten van Kinetic (het snel absoluut kunnen tekenen van vormen) met de voordelen van Gloss (het makkelijk kunnen verplaatsen, kleuren, roteren etc. van meerdere shapes).
+\todo{Afkortingen verwijderen?}
 
-Om deze keuze te illustreren volgt een ``Mickey Mouse'' vorm die gedraaid en gekleurd is. Hier is goed te zien hoe binnen de Container een absoluut coordinatenstelsel heerst, terwijl erbuiten relatieve bewerkingen uitgevoerd worden.
+Om deze keuze te illustreren volgt een ``Mickey Mouse'' vorm die gedraaid en gekleurd is. Hier is goed te zien hoe binnen de Container een absoluut co\"ordinatenstelsel heerst, terwijl erbuiten relatieve bewerkingen uitgevoerd worden.
 
 \begin{lstlisting}[style=densecode, language=Haskell]
 Fill black $ Translate 100 100 $ Rotate 90 $ Container 200 200 [
@@ -24,11 +25,12 @@ Fill black $ Translate 100 100 $ Rotate 90 $ Container 200 200 [
 \end{lstlisting}
 
 \subsection{Protocol}
-Uiteindelijk is ervoor gekozen om het protocol gelijkend aan Kinetic op te bouwen, zo zijn de meeste JSON berichten die gestuurd worden door de Canvas.Hs module een op een te teken op het canvas. Wel zijn er hier en daar kleine verschillen, JSON-keys die net anders zijn, of er zijn andere keys gebruikt om hetzelfde te modelleren (Een goed voorbeel hiervan is de kleuren, kleuren worden opgestuurd als object met r, g , b en a waarden, maar Kinetic verwacht een string met een kleur zoals hij geaccepteerd wordt door een webbrowser. De manier hoe Kinetic omgaat met een kleur is een implementatiedetail dat niet thuis hoort in een protocol).
+Uiteindelijk is ervoor gekozen om het protocol gelijkend aan Kinetic op te bouwen, zo zijn de meeste JSON berichten die gestuurd worden door de Canvas.Hs module een op een te teken op het canvas. Wel zijn er hier en daar kleine verschillen, JSON-keys die net anders zijn, of er zijn andere keys gebruikt om hetzelfde te modelleren (Een goed voorbeeld hiervan is de kleuren, kleuren worden opgestuurd als object met r, g , b en a waarden, maar Kinetic verwacht een string met een kleur zoals hij geaccepteerd wordt door een webbrowser. De manier hoe Kinetic omgaat met een kleur is een implementatiedetail dat niet thuis hoort in een protocol).
+\todo{Niet zo veel tussen haakjes zetten}
 
 \subsubsection{ID's}
 
-We wilden events ondersteunen in onze communicatie, de bestaande Functioneel Programmeren module geeft de gebruiker een (x,y) co"ordinaat maar geen direct event. Onze library zoekt zelf uit op welk element er geklikt is en vuurt bijvoorbeeld een MouseClick met een identifier. Hiertoe moesten we beslissen hoe identifiers uitgegeven worden, we hebben gekozen om de gebruiker hier verantwoordelijk voor te maken, de gebruiker besluit of een shape ge"interesseerd moet zijn in events en voegt hier een (unieke) naam aan toe, als het event dan gevuurd wordt, kan de gebruiker patternmatchen op zijn eigen uniek gekozen naam, en er worden nooit meer events over de lijn verstuurd dan de gebruiker om gevraagd heeft.
+We wilden events ondersteunen in onze communicatie, de bestaande Functioneel Programmeren module geeft de gebruiker een (x,y) co\"ordinaat maar geen direct event. Onze library zoekt zelf uit op welk element er geklikt is en vuurt bijvoorbeeld een MouseClick met een identifier. Hiertoe moesten we beslissen hoe identifiers uitgegeven worden, we hebben gekozen om de gebruiker hier verantwoordelijk voor te maken, de gebruiker besluit of een shape ge\"interesseerd moet zijn in events en voegt hier een (unieke) naam aan toe, als het event dan gevuurd wordt, kan de gebruiker patternmatchen op zijn eigen uniek gekozen naam, en er worden nooit meer events over de lijn verstuurd dan de gebruiker om gevraagd heeft.
 
 Wederom een kleine illustratie, hier voegen we een event toe aan onze ``Mickey Mouse''
 \begin{lstlisting}[style=densecode, language=Haskell]
@@ -47,9 +49,9 @@ handler state (MouseClick (x,y) "mickey") = -- Do something useful
 \end{lstlisting}
 
 \subsubsection{Defaults}
-We wilden voorkomen dat gebruikers bij bijvoorbeeld events steeds moeten aangeven dat ze niet ge"interesseerd zijn in muissleep events. Daartoe moesten we op zoek naar een manier om defaults toe te voegen aan Haskell. In eerste instantie wilden we alle elementen standaard van een \inlinecode{Maybe Event} voorzien, en dat de gebruiker dan \inlinecode{Nothing} toevoegde als er geen event nodig was. Naast dat we gekozen hebben om attributen als nodes in de graaf te modeleren, wilden we ook voorkomen dat de gebruiker onnodige \inlinecode{Nothing}s moet toevoegen.
+We wilden voorkomen dat gebruikers bij bijvoorbeeld events steeds moeten aangeven dat ze niet ge\"interesseerd zijn in muissleep events. Daartoe moesten we op zoek naar een manier om defaults toe te voegen aan Haskell. In eerste instantie wilden we alle elementen standaard van een \inlinecode{Maybe Event} voorzien, en dat de gebruiker dan \inlinecode{Nothing} toevoegde als er geen event nodig was. Naast dat we gekozen hebben om attributen als nodes in de graaf te modeleren, wilden we ook voorkomen dat de gebruiker onnodige \inlinecode{Nothing}s moet toevoegen.
 
-Onze oplossing is een \inlinecode{Default} typeklasse, een Event heeft een record met velden voor het ID en een aantal booleans voor of hij geinteresseerd is in Events, dit record derived \inlinecode{Defaults} en die typeklasse heeft een functie \inlinecode{defaults}. Deze functie geeft een standaard record terug die leeg is, het ID is leeg en de shape is (met dat record) niet geinteresseerd in events, de gebruiker kan dan die defaults bewerken om de shape een ID te geven en geinteresseerd te laten zijn in events. Een voorbeeld hiervan is hierboven al gegeven, het record gegeven door de \inlinecode{defaults} record is bewerkt en het eventId is "mickey" geworden, verder is de vorm nu geinteresseerd in muiskliks.
+Onze oplossing is een \inlinecode{Default} typeklasse, een Event heeft een record met velden voor het ID en een aantal booleans voor of hij ge\"interesseerd is in Events, dit record derived \inlinecode{Defaults} en die typeklasse heeft een functie \inlinecode{defaults}. Deze functie geeft een standaard record terug die leeg is, het ID is leeg en de shape is (met dat record) niet ge\"interesseerd in events, de gebruiker kan dan die defaults bewerken om de shape een ID te geven en ge\"interesseerd te laten zijn in events. Een voorbeeld hiervan is hierboven al gegeven, het record gegeven door de \inlinecode{defaults} record is bewerkt en het eventId is "mickey" geworden, verder is de vorm nu ge\"interesseerd in muisklikken.
 
 \todo{Ontwerpkeuze: Hulpfuncties zoals shape}
 \todo{Ontwerpkeuze: Toelichten acties}
