--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -5,11 +5,11 @@ Het systeem bestaat uit een browseromgeving dat door middel van HTML en JavaScri
 
 Initieel is een lijst met requirements opgesteld. Gedurende het ontwikkelproces zijn bij de meetings met de begeleider nieuwe requirements aan de orde gekomen; deze requirements zijn in deze lijst opgenomen.
 
-De requirements zijn opgesteldt met de MoSCoW-methode. Bij deze methode kunnen essentiele, niet-essentiele en uitgesloten requirements vastgesteld worden. Aan het eind van het project kan dan beter beoordeeld worden of alle essentieele functionaliteit geimplementeerd is. \todo{vooruit verwijzen naar checken requirements} Er wordt gebruik gemaakt van ``dient'' voor essentiele requirements, ``kan eventueel'' voor niet-essentiele requirements en ``zal niet'' voor uitgesloten requirements.
+De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen essenti\"ele, niet-essenti\"ele en uitgesloten requirements vastgesteld worden. Aan het eind van het project kan dan beter beoordeeld worden of alle essenti\"ele functionaliteit geimplementeerd is. \todo{vooruit verwijzen naar checken requirements} Er wordt gebruik gemaakt van ``dient'' voor essenti\"ele requirements, ``kan eventueel'' voor niet-essentiele requirements en ``zal niet'' voor uitgesloten requirements.
 
-\todo{Iets meer uitleggen over waarom requirements nodig zijn (bijv tbv gebruikerservaring of zat ook in Gloss-oplossing}
+\todo{Iets meer uitleggen over waarom requirements nodig zijn (bijv. t.b.v. gebruikerservaring of zat ook in Gloss-oplossing)}
 \subsubsection{Functionele requirements}
-In de basis zal Canvas.hs dezelfde functionaliteit moeten ondersteunen als de oude prakticumomgeving die gebruik maakt van de Gloss library.
+In de basis zal Canvas.hs dezelfde functionaliteit moeten ondersteunen als de oude practicumomgeving die gebruik maakt van de Gloss library.
 
 \newcounter{startvalue}
 \begin{enumerate}[{R}1]
