--- a/Hoofdstukken/ontwerp/testplan.tex
+++ b/Hoofdstukken/ontwerp/testplan.tex
@@ -15,9 +15,10 @@ Door deze manier van werken is altijd de development branch goed getest en is he
 De buildconfiguratie en testconfiguraties worden in de cabal file bijgehouden. Met het commando cabal test kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
 
 \subsection{Continuous Integration}
-Iedere ontwikkelaar zal gedurende de ontwikkeling zijn\todo{anders formuleren geen engelse woorden er in dumpen} changes pushen naar de Github repository. De Github repository is gekoppeld met Travis een cloud based continuous integration server. Tests worden automatisch uitgevoerd door Travis na het pushen van iedere commit. Indien een build faalt, zal hierover een bericht in Hipchat geplaatst worden. Doordat builds automatisch getest worden is altijd duidelijk: Welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemerged kan worden naar de development branch.
+Iedere ontwikkelaar zal gedurende de ontwikkeling zijn\todo{anders formuleren geen Engelse woorden er in dumpen} aanpassingen pushen naar de Github repository. De Github repository is gekoppeld met Travis een cloud based continuous integration server. Tests worden automatisch uitgevoerd door Travis na het pushen van iedere commit. Indien een build faalt, zal hierover een bericht in Hipchat geplaatst worden. Doordat builds automatisch getest worden is altijd duidelijk: Welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemerged kan worden naar de development branch.
 
 \todo{Beter alle losse delen geschrijven}
+\todo{Duidelijkere TODOs schrijven want deze is mij compleet onduidelijk??}
 \subsection{JavaScript} 
 Aan de client side wordt gewerkt met JavaScript, het Jasmine test framework wordt gebruikt om de tests te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command line worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder zal er gebruik gemaakt worden van de imagediff library om de daadwerkelijk getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
 
